# Grenouille

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/01-HelloWindow/: CMakeLists.txt  HelloWindowApplication.cpp  Main.cpp
examples/01-HelloWindow/include/HelloWindow/: HelloWindowApplication.hpp
examples/02-HelloDevice/: CMakeLists.txt  HelloDeviceApplication.cpp  Main.cpp
examples/02-HelloDevice/include/HelloDevice/: HelloDeviceApplication.hpp
examples/HelloWindow/: CMakeLists.txt  Main.cpp
examples/HelloWindow/include/HelloWindow/: HelloWindowApplication.hpp
lib/: CMakeLists.txt
src/Grenouille/: Application.cpp  BlendState.cpp  Buffer.cpp  CMakeLists.txt  ComputeShader.cpp  DepthStencilState.cpp  DepthStencilView.cpp  Device.cpp  DeviceChild.cpp  DeviceContext.cpp  InputLayout.cpp  PixelShader.cpp  RasterizerState.cpp  RenderTargetView.cpp  Resource.cpp  SamplerState.cpp  ShaderResourceView.cpp  Swapchain.cpp  Texture2D.cpp  UnorderedAccessView.cpp  VertexShader.cpp
src/Grenouille/include/Grenouille/: Application.hpp  ApplicationBuilder.hpp  BindFlags.hpp  BlendState.hpp  Buffer.hpp  BufferUsage.hpp  ComputeShader.hpp  CpuAccessFlag.hpp  DepthStencilState.hpp  DepthStencilView.hpp  Device.hpp  DeviceChild.hpp  DeviceContext.hpp  Format.hpp  InputElementDescriptor.hpp  InputLayout.hpp  InputLayoutDescriptor.hpp  ModeDescriptor.hpp  ModeScaling.hpp  PixelShader.hpp  PresentFlags.hpp  PrimitiveTopology.hpp  RasterizerState.hpp  Rational.hpp  RenderTargetView.hpp  RenderTargetViewDescriptor.hpp  RenderTargetViewDimension.hpp  Resource.hpp  SampleDescriptor.hpp  SamplerState.hpp  ScanlineOrder.hpp  ShaderResourceView.hpp  SwapEffect.hpp  Swapchain.hpp  SwapchainDescriptor.hpp  SwapchainFlags.hpp  Texture2D.hpp  Texture2DDescriptor.hpp  UnorderedAccessView.hpp  Usage.hpp  (+2 more)
